# AIlauncher

./: .gitignore  README.md  models.example.json  pyproject.toml  requirements.txt  setup.sh  tools.json
deploy/: models.server.experimental.json  models.server.json
docs/: README.md  gpu-optimized-build-experiment.md  lmlauncher-architecture.md  optimization-decision.md  server-deployment.md  update-workflow.md
docs/experiments/: 2026-04-30-llama-cpp-container-build.md  2026-04-30-qwen36-sara-optimization.md  2026-05-07-paper-validation.md
lmserv/: README.md  __init__.py  __main__.py  api.py  cli.py  config.py  gbnf.py  lmserv-README.md  manager.py  worker.py
lmserv/discovery/: README.md  __init__.py  discovery-README.md  mdns.py  registry.py
lmserv/gateway/: __init__.py  catalog.py  models.py  resolver.py  runtime.py  service.py
lmserv/gateway/backends/: __init__.py  common.py  llama_cpp.py  ollama.py
lmserv/install/: __init__.py  install-README.md  llama_build.py  models_fetch.py
lmserv/server/: README.md  __init__.py  api.py  audit.py  pool.py  security.py  server-README.md  tools.py
lmserv/server/workers/: README.md  __init__.py  cpp_bridge.py  llama.py  utils.py  workers-README.md
paper/: CIREDII2026_LMLauncher_Draft.md
scripts/: deploy_server.py  gpu_profile_build.py  remote_llama_bench.py
tests/: README.md  conftest.py  pruebas.py  test_api.py  test_cli.py  test_gateway_catalog.py  test_gateway_resolver.py  test_ollama_runtime.py  test_request_audit.py  test_server_catalog_profile.py  test_worker_pool.py
