[project]
name = "lmserv"
version = "0.0.1"
description = "mini-LM Studio local (CLI + FastAPI)"
readme = "README.md"

authors = [{ name = "Pedro I." }]

requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "typer[all]",
  "zeroconf",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "httpx",
]

[project.scripts]
lmserv = "lmserv.cli:cli"
